// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePassword should allow visible and hidden passwords 1`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li>
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li>
        numbers
      </li>
      <li>
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
      <div
        class="complexity complexityNone"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should allow visible and hidden passwords 2`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li>
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li>
        numbers
      </li>
      <li>
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="text"
        />
        <button
          aria-label="Hide"
          class="hide"
          title="Hide"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
      <div
        class="complexity complexityNone"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should allow visible and hidden passwords 3`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li>
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li>
        numbers
      </li>
      <li>
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
      <div
        class="complexity complexityNone"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should render 1`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li>
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li>
        numbers
      </li>
      <li>
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
      <div
        class="complexity complexityNone"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 1`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li>
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li>
        numbers
      </li>
      <li
        class="pass"
      >
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
        >
          You need to use both uppercase and lowercase letters
        </output>
      </p>
      <div
        class="complexity complexityNone"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 2`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li
        class="pass"
      >
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li>
        numbers
      </li>
      <li
        class="pass"
      >
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
        >
          You need to use at least one number
        </output>
      </p>
      <div
        class="complexity complexityPoor"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 3`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li
        class="pass"
      >
        uppercase and lowercase letters
      </li>
      <li>
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li
        class="pass"
      >
        numbers
      </li>
      <li
        class="pass"
      >
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
        >
          You need to use at least one special character
        </output>
      </p>
      <div
        class="complexity complexityMedium"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 4`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li
        class="pass"
      >
        uppercase and lowercase letters
      </li>
      <li
        class="pass"
      >
        punctuation or special characters
      </li>
      <li>
        12 characters minimum
      </li>
      <li
        class="pass"
      >
        numbers
      </li>
      <li
        class="pass"
      >
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
        >
          You need to use at least 12 characters
        </output>
      </p>
      <div
        class="complexity complexityGood"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          disabled=""
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 5`] = `
<div>
  <main
    class="container"
  >
    <h1
      class="heading"
    >
      Set Identity Password
    </h1>
    <p
      class="subline"
    >
      You need a secure password for every Identity. A strong password looks like this: 
       
      House 12! small DOGS
    </p>
    <h2
      class="criteriaHeading"
    >
      You need to use:
    </h2>
    <ul
      class="criteria"
    >
      <li
        class="pass"
      >
        uppercase and lowercase letters
      </li>
      <li
        class="pass"
      >
        punctuation or special characters
      </li>
      <li
        class="pass"
      >
        12 characters minimum
      </li>
      <li
        class="pass"
      >
        numbers
      </li>
      <li
        class="pass"
      >
        and don’t use our example
      </li>
    </ul>
    <form>
      <p
        class="inputLine"
      >
        <input
          aria-label="Please enter your password"
          autocomplete="new-password"
          class="input"
          minlength="12"
          name="password"
          placeholder="Please enter your password"
          required=""
          type="password"
        />
        <button
          aria-label="Show"
          class="show"
          title="Show"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        />
      </p>
      <div
        class="complexity complexityOk"
      >
        <div
          class="lock"
        />
      </div>
      <p>
        <a
          class="cancel"
          href="/"
        >
          Cancel
        </a>
        <button
          class="submit"
          type="submit"
        >
          Next Step
        </button>
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </main>
</div>
`;
